--- a/history.html
+++ b/history.html
@@ -16,11 +16,17 @@
         <a href="index.html">Kotisivu</a>
         <a href="about.html">Infosivu</a>
         <a href="history.html">Historia</a>
+        <a href="ranking.html">P4P ranking</a>
     </nav>
+    <div class="ontop">
+        <img src="historyhero.jpg" alt="herohistory" class="historyheader">
+        <div class="center">Historia</div>
+    </div>
+
     <div class="container">
         <div class="content">
-            <h2>Historia</h2>
-            <p>Tämä sivu kertoo verkkosivustosi tai yrityksesi historiasta. Voit lisätä ajanjaksoja, merkittäviä tapahtumia ja muuta kiinnostavaa tietoa.</p>
+            <p>Dokathlon on maailmanlajuisesti tunnettu rikkaasta historiastaan ja pitkistä perinteistään. Dokahtlonin pitkällä taipaleella on nähty monia unohtumattomia urheilusuoritukisa, lukuisia ennätyksiä, innovaatioita, joista muu urheilumaailma on ottanut vaikutteita. Lisäksi historiaan kuuluu monia uskomattomia David vs Goliath tarinoita ja liikuttavia hetkiä.</p>
+            <p>Dokathlonin historia on niin rikas, että sitä on mahdotonta mahduttaa yhdelle sivulle. Kuitenkin suurimmat hetket ovat jääneet muistoihimme ja historian kirjoihin. Tälle sivumme olemme koonneet kisan historiallisimpia hetkiä, voittajia ja sankareita.</p>
         </div>
         <div class="content">
             <div class="headerhis">
@@ -28,7 +34,8 @@
                 <h2>2021 Ensiaskeleet ja Von Lintulan kruunaus</h2> 
             </div>
             <div class="text-content">
-                <p>Tämä sivu kertoo verkkosivustosi tai yrityksesi historiasta. Voit lisätä ajanjaksoja, merkittäviä tapahtumia ja muuta kiinnostavaa tietoa.</p>
+                <p> Ensimmäinen virallinen Dokathlon järjestettiin 07.08.2021 Iitissä Villa Säteen uhreilupuistossa. Urheilujuhla alkoi 100 metrin sprinttikisalla, jossa nähtiin yksi kilpailuhistorian traagisimmista tapahtumista. Sir Seppälän luhistuttua maaliviivalle lääkintähenkilökuna juoksi paikalle. Sir Seppälälle todettin krooninen krapula. Kuitenkin vastoinkäymisistä huolimatta Seppälä koki ihmetoipumisen ja osallistui loppukilpailuun.</p>
+            <p>Ensimmäisen Dokathlonin jälkeiset rapujuhlat eivät kuitenkaan kumartaneet urheilujuhlalle. Rapujuhlat riistäytyivät käsistä niin pahasti, että Iitin kunnan karhuryhmä, Vuolenkosken Sheriffi jouduttiin kutsumaan paikalle ylläpitämään järjestystä ja poistamaan lukuisia faneja alueelta. Tästä hyvästä hänelle myönnettiin Iitin kunnan avain ja paikka Dokathlonin Hall of Famessa</p>
             </div>
         </div>
         <div class="content">
