--- a/index.html
+++ b/index.html
@@ -16,14 +16,15 @@
         <a href="index.html">Kotisivu</a>
         <a href="about.html">Infosivu</a>
         <a href="history.html">Historia</a>
+        <a href="ranking.html">P4P ranking</a>
     </nav>
-    <div class = "headshot">
+
+    <div class = "ontop">
         <img src="Header.png" alt="Header kuva" class="header-image"> 
+        <div class="center1">Tervetuloa Dokathloniin vuosimallia 2024!</div>
     </div>
     <div class="container">
-        <div class="headerhis">
-            <h2>Tervetuloa Dokahtloniin vuosimallia 2024!</h2>
-        </div>
+
         <div class="content">
             <p>Dokahtlon on historiallinen urheilujuhla, joka testaa osallistujien henkistä, fyysistä ja psyykkistä kestävyyttä 10 lajin muodossa. Lajit vaihtelevat vuosittain ja ovat tarkkaan varjeltu salaisuus, jotka kansainvälinen Dokathlonkomitea (IDSC) valitsee tarkasti. Onnittelut siis teille! Olette pääseet osaksi urheiluhistoriaa ja saaneet mahdollisuuden taistella maailman kunniotetuimmasta palkinnosta.</p>
             <p>Tältä sivustolta löydätte tietoa Dokathlonista ja sen aikataulusta. Lisäksi voitte syventylä dokahtlonin pitkään ja juhlantäytteiseen historiaan.</p>
