--- a/about.html
+++ b/about.html
@@ -16,11 +16,12 @@
         <a href="index.html">Kotisivu</a>
         <a href="about.html">Infosivu</a>
         <a href="history.html">Historia</a>
+        <a href="ranking.html">P4P ranking</a>
     </nav>
     <div class="container">
         <div class="content">
             <h2>Informaatiota kisasta</h2>
-            <p>Vuoden 2024 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 9-11.8 viikonloppuna. Alla näätte Dokahtlonin alustavan ohjelman. ISDP pidättää oikeuden aikataulun muutoksiin.</p>
+            <p>Vuoden 2024 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 9-11.8 viikonloppuna. Alla näätte Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
         </div>
         <div class="content">
             <h2>Kilpiluviikonlopun aikataulu</h2>
