--- a/ranking.html
+++ b/ranking.html
@@ -40,89 +40,89 @@
                 2. Heikki Lintula
             </div>
         </a>
-        <a href="P4P3.html">
+        <a href="P4Ppages/P4P3.html">
             <div class="P4Pcontent">
                 3. Heikki Lintula
             </div>
         </a>
-        <a href="P4P4.html">
+        <a href="P4Ppages/P4P4.html">
             <div class="P4Pcontent">
                 4. Heikki Lintula
             </div>
         </a>
-        <a href="P4P5.html">
+        <a href="P4Ppages/P4P5.html">
             <div class="P4Pcontent">
                 5. Heikki Lintula
             </div>
         </a>
-        <a href="P4P6.html">
+        <a href="P4Ppages/P4P6.html">
             <div class="P4Pcontent">
                 6. Heikki Lintula
             </div>
         </a>
-        <a href="P4P7.html">
+        <a href="P4Ppages/P4P7.html">
             <div class="P4Pcontent">
                 7. Heikki Lintula
             </div>
         </a>
-        <a href="P4P8.html">
+        <a href="P4Ppages/P4P8.html">
             <div class="P4Pcontent">
                 8. Heikki Lintula
             </div>
         </a>
-        <a href="P4P9.html">
+        <a href="P4Ppages/P4P9.html">
             <div class="P4Pcontent">
                 9. Heikki Lintula
             </div>
         </a>
-        <a href="P4P10.html">
+        <a href="P4Ppages/P4P10.html">
             <div class="P4Pcontent">
                 10. Heikki Lintula
             </div>
         </a>
-        <a href="P4P11.html">
+        <a href="P4Ppages/P4P11.html">
             <div class="P4Pcontent">
                 11. Heikki Lintula
             </div>
         </a>
-        <a href="P4P12.html">
+        <a href="P4Ppages/P4P12.html">
             <div class="P4Pcontent">
                 12. Heikki Lintula
             </div>
         </a>
-        <a href="P4P13.html">
+        <a href="P4Ppages/P4P13.html">
             <div class="P4Pcontent">
                 13. Heikki Lintula
             </div>
         </a>
-        <a href="P4P14.html">
+        <a href="P4Ppages/P4P14.html">
             <div class="P4Pcontent">
                 14. Heikki Lintula
             </div>
         </a>
-        <a href="P4Ppages/P4P15.html">
+        <a href="P4Ppages/P4Ppages/P4P15.html">
             <div class="P4Pcontent">
                 15. Heikki Lintula
             </div>
         </a>
-        <a href="P4P16.html">
+        <a href="P4Ppages/P4P16.html">
             <div class="P4Pcontent">
                 16. Heikki Lintula
             </div>
         </a>
 
-        <a href="P4P16.html">
+        <a href="P4Ppages/P4P16.html">
             <div class="P4Pcontent">
                 17. Heikki Lintula
             </div>
         </a>
 
-        <a href="P4P18.html">
+        <a href="P4Ppages/P4P18.html">
             <div class="P4Pcontent">
                 18. Heikki Lintula
             </div>
         </a>
-        <a href="P4P19.html">
+        <a href="P4Ppages/P4P19.html">
             <div class="P4Pcontent">
                 19. Heikki Lintula
             </div>
