Kuvia lisätty ja statseja ja rakenteita tehty

--- a/history.html
+++ b/history.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="palkinto.png">
+    <link rel="icon" type="image/png" href="Kuvat/palkinto.png">
 </head>
 <body>
     <header class="hero">
-        <img src="palkinto.png" alt="logo" class="heropic">
+        <img src="Kuvat/palkinto.png" alt="logo" class="heropic">
         <h1>Dokathlon 2024</h1>
     </header>
     <nav>
@@ -19,7 +19,7 @@
         <a href="ranking.html">P4P ranking</a>
     </nav>
     <div class="ontop">
-        <img src="historyhero.jpg" alt="herohistory" class="historyheader">
+        <img src="Kuvat/historyhero.jpg" alt="herohistory" class="historyheader">
         <div class="center">Historia</div>
     </div>
 
@@ -30,7 +30,7 @@
         </div>
         <div class="content">
             <div class="headerhis">
-                <img src="ekadokathlon.JPG" alt="historiakuva" class="history1">
+                <img src="Kuvat/ekadokathlon.JPG" alt="historiakuva" class="history1">
                 <h2>2021 Ensiaskeleet ja Von Lintulan kruunaus</h2> 
             </div>
             <div class="text-content">
@@ -40,14 +40,14 @@
         </div>
         <div class="content">
         <div class="headerhis">
-            <img src="history2.jpg" alt="historiakuva 2" class="history1">
+            <img src="Kuvat/history2.jpg" alt="historiakuva 2" class="history1">
             <h2>2022 Emperor Engströmin aikakausi</h2>
             </div>
             <p></p>
         </div>
         <div class="content">
             <div class="headerhis">
-                <img src="history3.jpg" alt="historiakuva 3" class="history1">
+                <img src="Kuvat/history3.jpg" alt="historiakuva 3" class="history1">
                 <h2>2023 Paluu juurille ja Talvitie dynastian synty</h2>
                 </div>
                 <p></p>
