--- a/ranking.html
+++ b/ranking.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kotisivu</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="palkinto.png">
+    <link rel="icon" type="image/png" href="Kuvat/palkinto.png">
 </head>
 <body>
     <header class="hero">
-        <img src="palkinto.png" alt="logo" class="heropic">
+        <img src="Kuvat/palkinto.png" alt="logo" class="heropic">
         <h1>Dokathlon 2024</h1>
     </header>
     <nav>
@@ -19,7 +19,7 @@
         <a href="ranking.html">P4P ranking</a>
     </nav>
     <div class = "ontop">
-        <img src="p4p.png" alt="Header kuva" class="header-image"> 
+        <img src="Kuvat/p4p.png" alt="Header kuva" class="header-image"> 
         <div class="center2">P4P ranking</div>
     </div>
     <div class="Container">
