--- a/P4Ppages/P4P2.html
+++ b/P4Ppages/P4P2.html
@@ -23,10 +23,10 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Veikko.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
-                <h2>Golf Division</h2>
+                <h2>Veikko Talvitie</h2>
+                <h2>Asfalttityö Divisioona</h2>
                 <p>25-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
@@ -34,7 +34,7 @@
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -51,36 +51,36 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Kesän tilastot</h3>
+                <p>3 Päivää vietetty kotona</p>
+                <p>30pv merellä</p>
+                <p>13 jallua tuhottu</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 15</p>
-                <p>5 rautaa katkasistu</p>
+                <h3>Viihdetilastot</h3>
+                <p>2,5 viihdepäivää per vk</p>
+                <p></p>
                 <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnot jauhelihoista</p>
+                <p>0 vessapaperirullaa ostettu 12.10.2023 jälkeen</p>
+                <p>100% huoneensiivous tehokkuus (Tilastohistorian paras)</p>
+                <p>Selvä 1.sija sakkokassassa</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kalesta</p>
+                <p>1 Dokathlon tittelin puolustus vuoden 2024 dokathloniin</p>
+                <p>5% puolustustehokkuus Torstai Kalesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
+                <p>4 veneenpohjaa hiottu</p>
+                <p>-</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
+                <p></p>
                 <p>100% lajeista humalassa</p>
             </div>
         </div>
