--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
                 <h2>2021 Ensiaskeleet ja Von Lintulan kruunaus</h2> 
             </div>
             <div class="text-content">
-                <p> Ensimmäinen virallinen Dokathlon järjestettiin 07.08.2021 Iitissä Villa Säteen uhreilupuistossa. Urheilujuhla alkoi 100 metrin sprinttikisalla, jossa nähtiin yksi kilpailuhistorian traagisimmista tapahtumista. Sir Seppälän luhistuttua maaliviivalle lääkintähenkilökuna juoksi paikalle. Sir Seppälälle todettin krooninen krapula. Kuitenkin vastoinkäymisistä huolimatta Seppälä koki ihmetoipumisen ja osallistui loppukilpailuun.</p>
+                <p> Ensimmäinen virallinen Dokathlon järjestettiin 07.08.2021 Iitissä Villa Säteen uhreilupuistossa. Urheilujuhla alkoi 100 metrin sprinttikisalla, jossa nähtiin yksi kilpailuhistorian traagisimmista tapahtumista. Sir Seppälän luhistuttua maaliviivalle lääkintähenkilökuna juoksi paikalle. Katomiden hiljennyttyä järkytyksestä tunnelma oli aavemainen, kun lääkintähenkilökunta tarkasti Sir Seppälän tilaa. Lääkintähenkilökunta totesi Sir Seppälälle todettin krooninen krapula. Kuitenkin vastoinkäymisistä huolimatta Seppälä koki ihmetoipumisen ja osallistui loppukilpailuun.</p>
             <p>Ensimmäisen Dokathlonin jälkeiset rapujuhlat eivät kuitenkaan kumartaneet urheilujuhlalle. Rapujuhlat riistäytyivät käsistä niin pahasti, että Iitin kunnan karhuryhmä, Vuolenkosken Sheriffi jouduttiin kutsumaan paikalle ylläpitämään järjestystä ja poistamaan lukuisia faneja alueelta. Tästä hyvästä hänelle myönnettiin Iitin kunnan avain ja paikka Dokathlonin Hall of Famessa</p>
             </div>
         </div>
@@ -43,7 +43,8 @@
             <img src="Kuvat/history2.jpg" alt="historiakuva 2" class="history1">
             <h2>2022 Emperor Engströmin aikakausi</h2>
             </div>
-            <p></p>
+            <p>Dokathlon saapui ensimmäistä kertaa nykymuodossaan Casa Winterroadile, jossa myös antiikin ajan kilpailut järjestettiin. Kilpailun toisena vuonna historiallinen Dokathlon laajensi kilpailijoiden määrää saavutettuaan massiivista suosiota edeltävänä vuotena. Karsintoja tapahtumaan järjestettiin ympäri vuoden ja tuhansista hakijoista karsiutui 11 rautaista haastaja. Karsintojen häkellyttävin suoritus tapahtui, kun Elias "Espoon Bateman" Leikkonen nappasi oman paikkansa päästämällä 25 ihmistä naamaVIP:illään Kalleen, joka jälkeen hän karsi yhden kilpailijansa heittämällä hänet ulos portsarien saattelemana. </p>
+            <p>Dokathlonin jälkeen </p>
         </div>
         <div class="content">
             <div class="headerhis">
