--- a/ranking.html
+++ b/ranking.html
@@ -27,8 +27,8 @@
             <h2></h2>
         </div>
         <div class="content">
-            <p>Dokatholin historiaan mahtuu suuria legendoja. Kysymys kuitenkin kuuluu: Kuka vie halutun Dokathlon-maljan? </p>
-            <p>Tälle sivulle on kerätty Dokathlon 2024 Kilpailijoiden Power Ranking entisten kilpilujen ja perättömän spekulaation perusteella.</p>
+            <p>Dokatholin historiaan mahtuu suuria legendoja. Kysymys kuitenkin kuuluu: Kuka vie halutun Dokathlon-maljan tänä vuonna? </p>
+            <p>Tälle sivulle on kerätty Dokathlon 2024 Kilpailijoiden Power Ranking entisten kilpilujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tukia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
         </div>
         <a href="P4Ppages/P4P1.html">
             <div class="P4Pcontent">
@@ -37,22 +37,22 @@
         </a>
         <a href="P4Ppages/P4P2.html">
             <div class="P4Pcontent">
-                2. Heikki Lintula
+                2. Veikko Talvitie
             </div>
         </a>
         <a href="P4Ppages/P4P3.html">
             <div class="P4Pcontent">
-                3. Heikki Lintula
+                3. Sebastian Engström
             </div>
         </a>
         <a href="P4Ppages/P4P4.html">
             <div class="P4Pcontent">
-                4. Heikki Lintula
+                4. Juho Säde
             </div>
         </a>
         <a href="P4Ppages/P4P5.html">
             <div class="P4Pcontent">
-                5. Heikki Lintula
+                5. Otto Hannula
             </div>
         </a>
         <a href="P4Ppages/P4P6.html">
