--- a/P4Ppages/P4P1.html
+++ b/P4Ppages/P4P1.html
@@ -66,17 +66,18 @@
                 <h3>Kämppä statsit</h3>
                 <p>12% lakanioden vaihto tehokkuus</p>
                 <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnot jauhelihoista</p>
+                <p>78% omistus asunnon jauhelihoista</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
                 <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kalesta</p>
+                <p>70% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
                 <p>13 Ubuntu konetta hallussa</p>
                 <p>40 043 riviä koodia kirjoitettu</p>
+                <p>400h CS2 pelattu</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
