--- a/P4Ppages/P4P2.html
+++ b/P4Ppages/P4P2.html
@@ -60,7 +60,7 @@
                 <h3>Viihdetilastot</h3>
                 <p>2,5 viihdepäivää per vk</p>
                 <p></p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <p>1200€ euroa käytetty kesän aikana aurinkolaseihin</p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
@@ -71,7 +71,7 @@
             <div class="stat">
                 <h3>Puolustus</h3>
                 <p>1 Dokathlon tittelin puolustus vuoden 2024 dokathloniin</p>
-                <p>5% puolustustehokkuus Torstai Kalesta</p>
+                <p>5% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
