--- a/P4Ppages/P4P7.html
+++ b/P4Ppages/P4P7.html
@@ -1,31 +1,92 @@
 <!DOCTYPE html>
-<html lang="fi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P4P1</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="icon" type="image/png" href="../palkinto.png">
-</head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>P4P1</title>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="icon" type="image/png" href="../Kuvat/palkinto.png">
+    </head>
 <body>
-    <header class="hero">
-        <img src="../palkinto.png" alt="logo" class="heropic">
-        <h1>Dokathlon 2024</h1>
+    <header>
+        <header class="hero">
+            <img src="../Kuvat/palkinto.png" alt="logo" class="heropic">
+            <h1>Dokathlon 2024</h1>
+        </header>
+        <nav>
+            <a href="../index.html">Kotisivu</a>
+            <a href="../about.html">Infosivu</a>
+            <a href="../history.html">Historia</a>
+            <a href="../ranking.html">P4P ranking</a>
+        </nav>
     </header>
-    <nav>
-        <a href="../index.html">Kotisivu</a>
-        <a href="../about.html">Infosivu</a>
-        <a href="../history.html">Historia</a>
-        <a href="../ranking.html">P4P ranking</a>
-    </nav>
-    <div class="container">
-        <div class="P4Pcontent">
-            <h2>P4P NRO.1 - Heikki Lintula</h2>
-            <p>Details about Heikki Lintula...</p>
+
+    <section class="fighter-profile">
+        <div class="fighter-header">
+            <img src="../Kuvat/risto.png" alt="Fighter Image" class="fighter-image">
+            <div class="fighter-info">
+                <h2>Risto Hartikainen</h2>
+                <h2></h2>
+                <p>25-1-0 (W-L-D)</p>
+                <div class="record">
+                    <div>
+                        <h3>1</h3>
+                        <p>Kulta</p>
+                    </div>
+                    <div>
+                        <h3>1</h3>
+                        <p>Hopea</p>
+                    </div>
+                    <div>
+                        <h3>0</h3>
+                        <p>Pronssi</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki oikeudet pidätetään.</p>
-    </footer>
+    </section>
+
+
+    <section class="stats">
+        <h2>Henkilökohtaiset tilastot</h2>
+        <div class="stats-grid">
+            <div class="stat">
+                <h3>El tiempoja juotu</h3>
+                <p>280</p>
+                <p>280 Putkitusta</p>
+            
+            </div>
+            <div class="stat">
+                <h3>Polo statsit</h3>
+                <p>65 BHP</p>
+                <p>8 kertaa kuukaudessa korjaamolla vaikka vuosimallia 2019</p>
+                <p>900€ euroa käytetty vuoden aikana ylinopeussakkoihin</p>
+            </div>
+            <div class="stat">
+                <h3>Voimistelu statsit</h3>
+                <p>+10kg elopainoa 2 kuukaudessa</p>
+                <p>loukkaantumisen todennäköisyys >50% joka treenissä</p>
+                <p>eniten dibsejä suomalaisista voimistelijoista</p>
+            </div>
+            <div class="stat">
+                <h3>Puolustus</h3>
+                <p>Hyökkäys on paras puolustus</p>
+                <p>7% puolustustehokkuus Heidi's bier baarista</p>
+                <p>100% puolustustehokkuus Windows koneista</p>
+            </div>
+            <div class="stat">
+                <h3>Työ(turvallisuus)tilastot</h3>
+                <p>Kaikilla tiedossa kaikki Riston salasanat</p>
+                <p>Vuotaa ChatGPT:lle pelkästään arkaluontoisia tietoja</p>
+                <p>Työkoneen hakuhistoriassa ainoastaan "Mirage smokes"</p>
+            </div>
+            <div class="stat">
+                <h3>Lajimenestys</h3>
+                <p>30% lajeista bokserit jalassa</p>
+                <p>70% lajeista alasti</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
+
