--- a/ranking.html
+++ b/ranking.html
@@ -57,32 +57,32 @@
         </a>
         <a href="P4Ppages/P4P6.html">
             <div class="P4Pcontent">
-                6. Heikki Lintula
+                6. Max Kuula
             </div>
         </a>
         <a href="P4Ppages/P4P7.html">
             <div class="P4Pcontent">
-                7. Heikki Lintula
+                7. Risto Hartikainen
             </div>
         </a>
         <a href="P4Ppages/P4P8.html">
             <div class="P4Pcontent">
-                8. Heikki Lintula
+                8. Joni Pihlman
             </div>
         </a>
         <a href="P4Ppages/P4P9.html">
             <div class="P4Pcontent">
-                9. Heikki Lintula
+                9. Diana
             </div>
         </a>
         <a href="P4Ppages/P4P10.html">
             <div class="P4Pcontent">
-                10. Heikki Lintula
+                10. Asse Immonen
             </div>
         </a>
         <a href="P4Ppages/P4P11.html">
             <div class="P4Pcontent">
-                11. Heikki Lintula
+                11. Elias Leikkonen
             </div>
         </a>
         <a href="P4Ppages/P4P12.html">
