--- a/P4Ppages/P4P3.html
+++ b/P4Ppages/P4P3.html
@@ -1,31 +1,91 @@
 <!DOCTYPE html>
-<html lang="fi">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P4P1</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="icon" type="image/png" href="../palkinto.png">
-</head>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>P4P1</title>
+        <link rel="stylesheet" href="../styles.css">
+        <link rel="icon" type="image/png" href="../Kuvat/palkinto.png">
+    </head>
 <body>
-    <header class="hero">
-        <img src="../palkinto.png" alt="logo" class="heropic">
-        <h1>Dokathlon 2024</h1>
+    <header>
+        <header class="hero">
+            <img src="../Kuvat/palkinto.png" alt="logo" class="heropic">
+            <h1>Dokathlon 2024</h1>
+        </header>
+        <nav>
+            <a href="../index.html">Kotisivu</a>
+            <a href="../about.html">Infosivu</a>
+            <a href="../history.html">Historia</a>
+            <a href="../ranking.html">P4P ranking</a>
+        </nav>
     </header>
-    <nav>
-        <a href="../index.html">Kotisivu</a>
-        <a href="../about.html">Infosivu</a>
-        <a href="../history.html">Historia</a>
-        <a href="../ranking.html">P4P ranking</a>
-    </nav>
-    <div class="container">
-        <div class="P4Pcontent">
-            <h2>P4P NRO.1 - Heikki Lintula</h2>
-            <p>Details about Heikki Lintula...</p>
+
+    <section class="fighter-profile">
+        <div class="fighter-header">
+            <img src="../Kuvat/Sebbe.png" alt="Fighter Image" class="fighter-image">
+            <div class="fighter-info">
+                <h2>Sebastian Engström</h2>
+                <h2>Sangria Division</h2>
+                <p>25-1-0 (W-L-D)</p>
+                <div class="record">
+                    <div>
+                        <h3>1</h3>
+                        <p>Kulta</p>
+                    </div>
+                    <div>
+                        <h3>0</h3>
+                        <p>Hopea</p>
+                    </div>
+                    <div>
+                        <h3>1</h3>
+                        <p>Pronssi</p>
+                    </div>
+                </div>
+            </div>
         </div>
-    </div>
-    <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki oikeudet pidätetään.</p>
-    </footer>
+    </section>
+
+
+    <section class="stats">
+        <h2>Henkilökohtaiset tilastot</h2>
+        <div class="stats-grid">
+            <div class="stat">
+                <h3>Oluita juotu</h3>
+                <p>340</p>
+                <p>123 Putkitusta</p>
+                <p>200 100% tyhjennystä</p>
+            </div>
+            <div class="stat">
+                <h3>Bilis statsit</h3>
+                <p>Keppi maksaa bilispöydän verran</p>
+                <p></p>
+                <p></p>
+            </div>
+            <div class="stat">
+                <h3>Kämppä statsit</h3>
+                <p>5 uutta remonttia viikossa</p>
+                <p>Aitaa korotettu taloyhtiön sääntöjä vastaan kahdesti</p>
+                <p>40 grillin kaasupulloa tyhjennetty kuukaudessa</p>
+            </div>
+            <div class="stat">
+                <h3>Puolustus</h3>
+                <p>1 Dokathlon tittelin puolustus</p>
+                <p>70% puolustustehokkuus Torstai Kallesta</p>
+            </div>
+            <div class="stat">
+                <h3>Työtilastot</h3>
+                <p>40 000 uutta asiakasta päivässä</p>
+                <p>50% viikosta viikonlopun kuittien vähentämiseen</p>
+                <p>20 uutta nakkikonetta palkattu kuukaudessa</p>
+            </div>
+            <div class="stat">
+                <h3>Lajimenestys</h3>
+                <p>Heittää minkä tahansa esineen 100m päähän olut toisessa kädessä</p>
+                <p></p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
+
