--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
             <p>Vuoden 2024 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 9-11.8 viikonloppuna. Alla näätte Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
         </div>
         <div class="content">
-            <h2>Kilpiluviikonlopun aikataulu</h2>
+            <h2>Kilpailuviikonlopun aikataulu</h2>
             <h3>Pe 9.8</h3>
             <p>Klo 16-</p>
             <p>Saapuminen Vääksyyn, Omatoiminen asettautiminen, saunominen, ruokailu ja juhliminen</p>
