--- a/P4Ppages/P4P3.html
+++ b/P4Ppages/P4P3.html
@@ -71,7 +71,7 @@
             <div class="stat">
                 <h3>Puolustus</h3>
                 <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>7% puolustustehokkuus viinikaapeista</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
