--- a/P4Ppages/P4P4.html
+++ b/P4Ppages/P4P4.html
@@ -51,27 +51,27 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Urheilustatsit</h3>
+                <p>800 km pyöräilty viikonlopun aikana</p>
+                <p>25 padelmatsia krapulassa</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Netflix statsit</h3>
+                <p>pyörii taustalla kokatessa, töitä tehdessä ja reelejä selatessa</p>
+                <p>Modern family 8 kertaa läpi</p>
+                <p>Providaa kaikki tunnukset kämppiksille <3 </p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
                 <p>2 viikon elinajanodote yrteillä</p>
                 <p></p>
-                <p>85%% omistus asunnon sipuleista</p>
+                <p>85% omistus asunnon sipuleista</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
                 <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>9% puolustustehokkuus sunnareista</p>
+                <p>0% puolustustehokkuus makuvichyistä</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
@@ -80,8 +80,8 @@
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>0% omista lajeista dokathlon listalla</p>
+                <p>Saattaa heittää esineitä arvaamattomiin suuntiin</p>
             </div>
         </div>
     </section>
