--- a/P4Ppages/P4P5.html
+++ b/P4Ppages/P4P5.html
@@ -53,14 +53,14 @@
             <div class="stat">
                 <h3>Nikotiini statsit</h3>
                 <p></p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <p>Ostaa miedompia ja pummii vahvempia nikotiinipusseja</p>
+                <p>Lopettanut lopullisesti jo 4 kertaa!</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Ruokastatsit</h3>
+                <p>5 päivää viikossa nistipataa</p>
+                <p>Vastuussa puolista suomessa tuotetun karjan ja siipikarjan kuolemista</p>
+                <p>450€ käytetty mökkiviikonlopun "yösafkoihin"</p>
             </div>
             <div class="stat">
                 <h3>Jypikylä statsit</h3>
@@ -70,19 +70,20 @@
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Ei dokathlon puolustettavaa</p>
+                <p>7% puolustustehokkuus Tehtaankadun sohvalla nukkumisesta</p>
+                <p>100% puolustustehokkuus baarissa vittuilulta pelkällä elopainolla</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>Viimeks toimistolla huhtikuussa</p>
+                <p>Hoitaa Sebben kyseenalaiset kuitit mukisematta</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>100% lajeista raa'alla voimalla</p>
+                <p>Pystyy olemuksellaan saavuttamaan luovutusvoiton muilta osallistujilta</p>
+                <p>Hienomotoriikka yhtä sivelevä kuin juuresharja</p>
             </div>
         </div>
     </section>
