--- a/P4Ppages/P4P8.html
+++ b/P4Ppages/P4P8.html
@@ -51,38 +51,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
+                <h3>Viinaa juotu</h3>
+                <p>3 pulloa viikonloppua varten</p>
+                <p></p>
                 <p>200 100% tyhjennystä</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Rapujuhla statsit</h3>
+                <p>3 vuoden aikana 8 rapua syöty</p>
+                <p>6 kertainen suomen mestari</p>
+                <p>200€ euroa käytetty uusiin Honoreihin (8kpl)</p>
             </div>
             <div class="stat">
-                <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <h3>Pitsku statsit </h3>
+                <p>12 Puukotusta viikottain</p>
+                <p>4 kertaa bensat viety autosta</p>
+                <p>8 ruokamyrkytystä epäilyttävän halvasta lähipizzerisasta</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>0% puolustustehokkuus kielimoukarilta rantsulla</p>
+                <p>100% puolustustehokkuus Viking Linelta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>Kaikki mahdolliset rekkakortit</p>
+                <p>200 000 km ajettu yhtä soittoa</p>
+                <p>400 uutta kiinteistöä omissa nimissä</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Surkea</p>
             </div>
         </div>
     </section>
