--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <div class="container">
         <div class="content">
             <h2>Informaatiota kisasta</h2>
-            <p>Vuoden 2024 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 9-11.8 viikonloppuna. Alla näätte Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
+            <p>Vuoden 2024 Dokathlon järjestetään historiallisen Casa Winterroadin tiluksilla, jossa myös Dokahtlonin aloituspöytäkirjat allekirjoitettiin. Dokahtlon järjestetään 9-11.8 viikonloppuna. Alla näette Dokahtlonin alustavan ohjelman. IDSP pidättää oikeuden aikataulun muutoksiin.</p>
         </div>
         <div class="content">
             <h2>Kilpailuviikonlopun aikataulu</h2>
@@ -39,10 +39,12 @@
             <p>Legendaariset rapujuhlat</p>
             <p>21-?</p>
             <h3>Su 11.8</h3>
+            <p>Klo 09-21</p>
+            <p>Herääminen</p>
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki oikeudet pidätetään.</p>
+        <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
 </body>
 </html>
