--- a/ranking.html
+++ b/ranking.html
@@ -87,39 +87,39 @@
         </a>
         <a href="P4Ppages/P4P12.html">
             <div class="P4Pcontent">
-                12. Heikki Lintula
+                12. Ilari Huotari
             </div>
         </a>
         <a href="P4Ppages/P4P13.html">
             <div class="P4Pcontent">
-                13. Heikki Lintula
+                13. Jenni Vihosalmi
             </div>
         </a>
         <a href="P4Ppages/P4P14.html">
             <div class="P4Pcontent">
-                14. Heikki Lintula
+                14. Marikki Viljasaari
             </div>
         </a>
         <a href="P4Ppages/P4Ppages/P4P15.html">
             <div class="P4Pcontent">
-                15. Heikki Lintula
+                15. Rasmus Rapala
             </div>
         </a>
         <a href="P4Ppages/P4P16.html">
             <div class="P4Pcontent">
-                16. Heikki Lintula
+                16. Kasperi Kauppi
             </div>
         </a>
 
         <a href="P4Ppages/P4P16.html">
             <div class="P4Pcontent">
-                17. Heikki Lintula
+                17. Jiri Aro
             </div>
         </a>
 
         <a href="P4Ppages/P4P18.html">
             <div class="P4Pcontent">
-                18. Heikki Lintula
+                18. Eemeli Raninen
             </div>
         </a>
         <a href="P4Ppages/P4P19.html">
@@ -129,7 +129,7 @@
         </a>
     </div>
     <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki oikeudet pidätetään.</p>
+        <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
 </body>
 </html>
