--- a/history.html
+++ b/history.html
@@ -34,7 +34,7 @@
                 <h2>2021 Ensiaskeleet ja Von Lintulan kruunaus</h2> 
             </div>
             <div class="text-content">
-                <p> Ensimmäinen virallinen Dokathlon järjestettiin 07.08.2021 Iitissä Villa Säteen uhreilupuistossa. Urheilujuhla alkoi 100 metrin sprinttikisalla, jossa nähtiin yksi kilpailuhistorian traagisimmista tapahtumista. Sir Seppälän luhistuttua maaliviivalle lääkintähenkilökuna juoksi paikalle. Katomiden hiljennyttyä järkytyksestä tunnelma oli aavemainen, kun lääkintähenkilökunta tarkasti Sir Seppälän tilaa. Lääkintähenkilökunta totesi Sir Seppälälle todettin krooninen krapula. Kuitenkin vastoinkäymisistä huolimatta Seppälä koki ihmetoipumisen ja osallistui loppukilpailuun.</p>
+                <p> Ensimmäinen virallinen Dokathlon järjestettiin 07.08.2021 Iitissä Villa Säteen uhreilupuistossa. Urheilujuhla alkoi 100 metrin sprinttikisalla, jossa nähtiin yksi kilpailuhistorian traagisimmista tapahtumista. Sir Seppälän luhistuttua maaliviivalle lääkintähenkilökuna juoksi paikalle. Katsojien hiljennyttyä järkytyksestä tunnelma oli aavemainen, kun lääkintähenkilökunta tarkasti Sir Seppälän tilaa. Lääkintähenkilökunta totesi Sir Seppälälle kroonisen krapulan. Kuitenkin vastoinkäymisistä huolimatta Seppälä koki ihmetoipumisen ja osallistui loppukilpailuun.</p>
             <p>Ensimmäisen Dokathlonin jälkeiset rapujuhlat eivät kuitenkaan kumartaneet urheilujuhlalle. Rapujuhlat riistäytyivät käsistä niin pahasti, että Iitin kunnan karhuryhmä, Vuolenkosken Sheriffi jouduttiin kutsumaan paikalle ylläpitämään järjestystä ja poistamaan lukuisia faneja alueelta. Tästä hyvästä hänelle myönnettiin Iitin kunnan avain ja paikka Dokathlonin Hall of Famessa</p>
             </div>
         </div>
@@ -55,7 +55,7 @@
             </div>
     </div>
     <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki oikeudet pidätetään.</p>
+        <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
 </body>
 </html>
