--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Dokathlon. Kaikki oikeudet pidätetään.</p>
+        <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
 </body>
 </html>
