--- a/P4Ppages/P4P11.html
+++ b/P4Ppages/P4P11.html
@@ -23,7 +23,7 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Asse.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Eltsu.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Elias Leikkonen</h2>
                 <h2>Golf Division</h2>
