--- a/history.html
+++ b/history.html
@@ -17,6 +17,7 @@
         <a href="about.html">Infosivu</a>
         <a href="history.html">Historia</a>
         <a href="ranking.html">P4P ranking</a>
+        <a href="results.html">Tulokset</a>
     </nav>
     <div class="ontop">
         <img src="Kuvat/historyhero.jpg" alt="herohistory" class="historyheader">
