--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
         <a href="about.html">Infosivu</a>
         <a href="history.html">Historia</a>
         <a href="ranking.html">P4P ranking</a>
+        <a href="results.html">Tulokset</a>
     </nav>
     <div class="container">
         <div class="content">
